--- a/WindowsFormsApplication1/RedmineClientStrings.resx
+++ b/WindowsFormsApplication1/RedmineClientStrings.resx
@@ -117,7 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="HostLabel" xml:space="preserve">
+    <value>Host</value>
+  </data>
+  <data name="LoginButton" xml:space="preserve">
+    <value>Log in</value>
+  </data>
   <data name="LoginLabel" xml:space="preserve">
-    <value>Логин</value>
+    <value>Login</value>
+  </data>
+  <data name="PasswordLabel" xml:space="preserve">
+    <value>Password</value>
+  </data>
+  <data name="TitleLabel" xml:space="preserve">
+    <value>Redmine Update Client</value>
   </data>
 </root>
