--- a/WindowsFormsApplication1/RedmineClientStrings.ru-RU.resx
+++ b/WindowsFormsApplication1/RedmineClientStrings.ru-RU.resx
@@ -117,7 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="HostLabel" xml:space="preserve">
+    <value>Хост</value>
+  </data>
+  <data name="LoginButton" xml:space="preserve">
+    <value>Войти</value>
+  </data>
   <data name="LoginLabel" xml:space="preserve">
     <value>Логин</value>
+  </data>
+  <data name="PasswordLabel" xml:space="preserve">
+    <value>Пароль</value>
+  </data>
+  <data name="TitleLabel" xml:space="preserve">
+    <value>Redmine Update Client</value>
   </data>
 </root>
