--- a/WindowsFormsApplication1/MainForm1.resx
+++ b/WindowsFormsApplication1/MainForm1.resx
@@ -211,4 +211,7 @@
   <metadata name="RUpdateIssue.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>448, 17</value>
   </metadata>
+  <metadata name="RLogin.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>574, 17</value>
+  </metadata>
 </root>
