--- a/WindowsFormsApplication1/LoginForm.resx
+++ b/WindowsFormsApplication1/LoginForm.resx
@@ -360,7 +360,7 @@
     <value>383, 313</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>LoginForm</value>
+    <value>Redmine Update Client</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>LoginForm</value>
