--- a/WindowsFormsApplication1/RedmineClientStrings.ru-RU.resx
+++ b/WindowsFormsApplication1/RedmineClientStrings.ru-RU.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="EditHostBox" xml:space="preserve">
+    <value>Изменить хост</value>
+  </data>
   <data name="HostLabel" xml:space="preserve">
     <value>Хост</value>
   </data>
